force-app/main/default/objects/Segment_Mapping__mdt/Segment_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Mapping of Segment Code Name to the Segment Code, Segment Group and Segment Global Indicator</description>
    <label>Segment Mapping</label>
    <pluralLabel>Segment Mappings</pluralLabel>
</CustomObject>