force-app/main/default/objects/Segment_Mapping__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Segment Code Description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>