force-app/main/default/objects/Segment_Mapping__mdt/fields/Segment_Code__c.field-meta.xml
<CustomField>
    <fullName>Segment_Code__c</fullName>
    <description>Field to hold the Segment code value</description>
    <label>Segment Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>