force-app/main/default/objects/Segment_Mapping__mdt/fields/Segment_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Segment_Code_Name__c</fullName>
    <description>Segment Code Name Value</description>
    <label>Segment Code Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>