force-app/main/default/objects/Segment_Mapping__mdt/fields/Segment_Global_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Segment_Global_Indicator__c</fullName>
    <description>Field to hold the Segment Global Indicator value</description>
    <label>Segment Global Indicator</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>