force-app/main/default/objects/Segment_Mapping__mdt/fields/Segment_Group__c.field-meta.xml
<CustomField>
    <fullName>Segment_Group__c</fullName>
    <description>Field to hold the Segment Group value</description>
    <label>Segment Group</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>