force-app/main/default/objects/Segment_Mapping__mdt/listViews/Segment_Code_Mapping.listView-meta.xml
<ListView>
    <fullName>Segment_Code_Mapping</fullName>
    <columns>Segment_Code_Name__c</columns>
    <columns>Segment_Code__c</columns>
    <columns>Segment_Group__c</columns>
    <columns>Segment_Global_Indicator__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Segment Code Mapping</label>
</ListView>